--- a/projeto-2-ano-main/index.html
+++ b/projeto-2-ano-main/index.html
@@ -6,16 +6,25 @@
     <title>Projeto 2 ano</title>
 </head>
 <body>
-    <header>
+    <header class="container">
+        <p>Login</p>
+        <p>Pesquisar</p>
+        <div class="text-center">
       <img src="" alt="">  
       <h1>Sou Suelen Czek</h1>
       <h2>Professora</h2>
       <img src="img/Avatar-Loak.jpg" alt="">
+    </div>
        
     </header>
     <section>
+        <p>Minhas Habilidades</p>
+        <div>
+          <p>Professora de Matemática</p>
+          <p>Professora de Danca do Ventre</p>
+          <p>Professora de Programação</p>
+        </div>
         
-        corpo do site 
 
     </section>
     <footer>
